# svDOOM

./: .gitignore  .gitmodules  CHANGELOG  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
linuxdoom-1.10/: CMakeLists.txt  am_map.c  d_main.c  doomdef.h  doomtype.h  i_sound.c  i_system.c  i_video.c  m_bbox.c  m_bbox.h  m_menu.c  m_misc.c  r_data.c  r_draw.c  w_wad.c
